[gd_scene load_steps=3 format=2]

[ext_resource path="res://Structures/Dummy/TargetDummyInterface.gd" type="Script" id=1]
[ext_resource path="res://GUI/Missions/background_ninepatch.png" type="Texture" id=2]

[node name="TargetDummyInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="."]
margin_left = 151.0
margin_top = 53.0
margin_right = 338.0
margin_bottom = 225.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 13, 13 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 199.0
margin_top = 59.0
margin_right = 293.0
margin_bottom = 73.0
text = "Target Dummy"

[node name="Knockback" type="Label" parent="."]
margin_left = 173.0
margin_top = 89.0
margin_right = 313.0
margin_bottom = 103.0
text = "Knockback Resistance"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KnockbackSlider" type="HSlider" parent="."]
margin_left = 198.0
margin_top = 103.0
margin_right = 291.0
margin_bottom = 119.0

[node name="Armor" type="Label" parent="."]
margin_left = 221.0
margin_top = 128.0
margin_right = 261.0
margin_bottom = 142.0
text = "Armor"

[node name="ArmorSlider" type="HSlider" parent="."]
margin_left = 198.0
margin_top = 141.0
margin_right = 291.0
margin_bottom = 157.0

[node name="AnchoredButton" type="CheckBox" parent="."]
margin_left = 194.0
margin_top = 166.0
margin_right = 218.0
margin_bottom = 190.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Anchored" type="Label" parent="."]
margin_left = 219.0
margin_top = 171.0
margin_right = 280.0
margin_bottom = 185.0
text = "Anchored"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PickupButton" type="Button" parent="."]
margin_left = 217.0
margin_top = 196.0
margin_right = 271.0
margin_bottom = 216.0
text = "Pickup"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="."]
margin_left = 291.0
margin_top = 105.0
margin_right = 315.0
margin_bottom = 119.0
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 292.0
margin_top = 142.0
margin_right = 316.0
margin_bottom = 156.0
text = "100"
[connection signal="value_changed" from="KnockbackSlider" to="." method="_on_KnockbackSlider_value_changed"]
[connection signal="value_changed" from="ArmorSlider" to="." method="_on_ArmorSlider_value_changed"]
[connection signal="toggled" from="AnchoredButton" to="." method="_on_AnchoredButton_toggled"]
[connection signal="pressed" from="PickupButton" to="." method="_on_PickupButton_pressed"]
